# tp

./: Cargo.toml
src/: daemon.rs  errors.rs  main.rs  socket.rs
src/errors/: app_errors.rs  ipc_server_err.rs
